cmake_minimum_required(VERSION 2.8)
set(Boost_INCLUDE_DIR /home/evnikulin/boost_1_72_0)
set(Boost_LIBRARY_DIR /home/evnikulin/boost_1_72_0/stage/lib)
include_directories(${Boost_INCLUDE_DIR})
include_directories(include)
link_directories(${Boost_LIBRARY_DIR})
add_executable(main main.cpp)
target_link_libraries( main ${Boost_LIBRARIES} )
target_compile_features(main PRIVATE cxx_std_17)